# SerialConsole

./: .flake8  .gitignore  README.md  meson.build  meson_options.txt  ruff.toml  run
data/: com.github.knuxify.SerialBowl.desktop.in  com.github.knuxify.SerialBowl.gschema.xml  com.github.knuxify.SerialBowl.metainfo.xml.in  com.github.knuxify.SerialConsole.desktop.in  com.github.knuxify.SerialConsole.gschema.xml.in  com.github.knuxify.SerialConsole.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: common.py  config.py  logger.py  main.py  meson.build  serial.py  serialbowl.gresource.xml  serialbowl.in  serialconsole.gresource.xml  serialconsole.in  style.css  terminal.py  window.py
src/ui/: settings-pane.ui  terminal.ui  window.ui
